# golden-butterfly-updater

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.example.yml  docker-compose.yml  pyproject.toml
golden_butterfly_updater/: __main__.py  config.py  regex.py  types.py
golden_butterfly_updater/browser/: browser_exceptions.py  browser_manager.py  delays.py
golden_butterfly_updater/portfolio_updater/: google_portfolio_updater.py  portfolio_updater.py
golden_butterfly_updater/scraper/: asset.py  bank_scraper.py  my_investor_bank_scraper.py  scraper_exceptions.py  trade_republic_bank_scraper.py
